--- a/vignettes/NMsim-publications.Rmd
+++ b/vignettes/NMsim-publications.Rmd
@@ -38,6 +38,7 @@ Authors: Philip Delff
 <!-- [pdf](../doc/NMsim_general_web.pdf) -->
 <!-- [`Code`](https://github.com/NMautoverse/NMsim/blob/main/publications/ACOP2024/NMsim_general_html.Rmd) -->
 [pdf](../reference/figures/NMsim_general_web.pdf)
+The code is in [NMsim - Seamless NONMEM Simulation Platform in R]{NMsim-intro.html}
 
 Building Automated Pharmacometrics Analysis Workflows in R with NMsim (Poster T49)  
 Authors: Boris Grinshpun, Samer Mouksassi, Philip Delff  
