--- a/vignettes/packages.bib
+++ b/vignettes/packages.bib
@@ -1,9 +1,9 @@
 @Manual{R-data.table,
   title = {data.table: Extension of `data.frame`},
-  author = {Matt Dowle and Arun Srinivasan},
-  year = {2021},
-  note = {https://r-datatable.com, https://Rdatatable.gitlab.io/data.table,
-https://github.com/Rdatatable/data.table},
+  author = {Tyson Barrett and Matt Dowle and Arun Srinivasan and Jan Gorecki and Michael Chirico and Toby Hocking},
+  year = {2024},
+  note = {R package version 1.15.2},
+  url = {https://r-datatable.com},
 }
 
 @Manual{R-NMdata,
@@ -11,47 +11,31 @@ https://github.com/Rdatatable/data.table},
 Modeling},
   author = {Philip Delff},
   year = {2024},
-  note = {R package version 0.1.6},
-  url = {https://philipdelff.github.io/NMdata/},
+  note = {R package version 0.1.8},
+  url = {https://nmautoverse.github.io/NMdata/},
 }
 
 @Manual{R-NMsim,
   title = {NMsim: Seamless Nonmem Simulation Platform},
   author = {Philip Delff},
-  note = {R package version 0.1.3.921},
-  url = {https://philipdelff.github.io/NMsim/},
   year = {2024},
-}
-
-@Manual{R-pagedown,
-  title = {pagedown: Paginate the HTML Output of R Markdown with CSS for Print},
-  author = {Yihui Xie and Romain Lesur and Brent Thorne and Xianying Tan},
-  year = {2021},
-  note = {R package version 0.15},
-  url = {https://github.com/rstudio/pagedown},
-}
-
-@Manual{R-posterdown,
-  title = {posterdown: Generate PDF Conference Posters Using R Markdown},
-  author = {Brent Thorne},
-  year = {2019},
-  note = {R package version 1.0},
-  url = {https://github.com/brentthorne/posterdown},
+  note = {R package version 0.1.4},
+  url = {https://NMautoverse.github.io/NMsim/},
 }
 
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
-  author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2021},
-  note = {R package version 2.9},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
+  author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+  year = {2023},
+  note = {R package version 2.25},
+  url = {https://github.com/rstudio/rmarkdown},
 }
 
 @Manual{R-xgxr,
   title = {xgxr: Exploratory Graphics for Pharmacometrics},
   author = {Andrew Stein and Alison Margolskee and Fariba Khanshan and Konstantin Krismer},
-  year = {2021},
-  note = {R package version 1.1.1},
+  year = {2023},
+  note = {R package version 1.1.2},
   url = {https://opensource.nibr.com/xgx/},
 }
 
@@ -61,7 +45,7 @@ Modeling},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2018},
-  note = {ISBN 9781138359338},
+  isbn = {9781138359338},
   url = {https://bookdown.org/yihui/rmarkdown},
 }
 
@@ -71,7 +55,7 @@ Modeling},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2020},
-  note = {ISBN 9780367563837},
+  isbn = {9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
 
